# backend

./: .env  .gitignore  Cargo.toml  db.sqlite
migrations/: 20230420133752_User.up.sql
scripts/: build_full.sh  setup.sh
src/: db.rs  main.rs  util.rs
src/api/: mod.rs
src/api/routes/: mod.rs
src/api/routes/auth/: get.rs  post.rs
src/api/routes/user/: add.rs
