[package]
name = "selkz-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["macros"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
hmac = { version = "0.12.1", features = ["std"] }
jwt = "0.16.0"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
sha256 = "1.1.3"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
token-generator = "0.1.0"
tokio = { version = "1.27.0", features = ["macros"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4"] }
